crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__captures_bad_filters_as_error.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"    :snap \"\"\"#, r#\"    :snap /foo\"#,\nr#\"    :snap /foo/x/\"#, r#\"    :snap /foo/bar\"#,\nr#\"    :snap /foo/\"#,].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "empty filter string",
            },
            raw: "    :snap \"\"",
        },
        Line {
            kind: Error {
                message: "missing separator delimiter",
            },
            raw: "    :snap /foo",
        },
        Line {
            kind: Error {
                message: "replacement must be one terminal cell wide",
            },
            raw: "    :snap /foo/x/",
        },
        Line {
            kind: Error {
                message: "replacement must be one terminal cell wide",
            },
            raw: "    :snap /foo/bar",
        },
        Line {
            kind: Error {
                message: "replacement must be one terminal cell wide",
            },
            raw: "    :snap /foo/",
        },
    ],
}
