crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__captures_invalid_snap_regex_as_error.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap /(unterminated/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "invalid regex pattern: regex parse error:\n    (unterminated\n    ^\nerror: unclosed group",
            },
            raw: "    :snap /(unterminated/x",
        },
    ],
}
