crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__captures_unknown_directive_as_error.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :unknown abc\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "unknown directive ':unknown'",
            },
            raw: "    :unknown abc",
        },
    ],
}
