crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__captures_unterminated_keys_string_as_error.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\"    :k \"unterminated\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "invalid shell arguments",
            },
            raw: "    :k \"unterminated",
        },
    ],
}
