crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__leaves_unindented_colon_lines_as_text.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\":shell echo nope\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Text,
            raw: ":shell echo nope",
        },
    ],
}
