crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_copy_directive.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :copy scripts/tmcap tmp/tmcap\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Copy {
                source: "scripts/tmcap",
                path: "tmp/tmcap",
            },
            raw: "    :copy scripts/tmcap tmp/tmcap",
        },
    ],
}
