crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_empty_script.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(\"\")"
---
Script {
    lines: [],
}
